tests/neg-macros/macro-class-not-found-1/Bar.scala
import scala.quoted._

object Bar {
  Foo.myMacro() // error
}
